--- a/src/styles/media.scss
+++ b/src/styles/media.scss
@@ -1,38 +1,193 @@
 @media (max-width: 1400px) {
-  .header__photo {
-    display: none;
-  }
+  .header {
+    &__photo {
+      display: none;
+    }
 
-  .header__photo-smaller {
-    display: block;
-  }
+    &__photo-smaller {
+      display: block;
+    }
 
-  .header__main {
-    width: 56.64%;
+    &__main {
+      width: 56.64%;
+    }
   }
 
   .section__small {
     padding: 0 55px;
   }
-  
+
+  .gallery {
+    &__img-3,
+    &__img-6 {
+      display: none;
+    }
+    &__img-1,
+    &__img-5 {
+      width: calc(33.3% - 30px / 2);
+    }
+
+    &__img-2,
+    &__img-4 {
+      width: calc(66.6% - 30px / 2);
+    }
+  }
+
   .footer {
     padding: 0 55px;
   }
 }
 
 @media (max-width: 962px) {
-  .header__events {
-    display: none;
+  .header {
+    &__events {
+      display: none;
+    }
+
+    &__title {
+      font-size: 55px;
+      line-height: 55px;
+      left: -233px;
+    }
+
+    &__button {
+      left: -233px;
+    }
   }
 
-  .header__title {
-    font-size: 55px;
-    line-height: 55px;
-    left: -233px;
+  .menu {
+    margin-left: 30px;
+    &__buttons,
+    &__buy-container,
+    &__bottom,
+    &__search-label {
+      display: none;
+    }
+
+    &__content-top {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+    &__logo-nav {
+      flex-direction: column;
+      align-items: flex-start;
+      margin-bottom: 5%;
+    }
+
+    &__logo {
+      margin: 0 0 10px;
+    }
   }
 
-  .header__button {
-    left: -233px;
+  .nav {
+    &__list {
+      flex-direction: column;
+    }
+
+    &__link {
+      font-size: 30px;
+      letter-spacing: 1px;
+    }
+  }
+
+  .section__small {
+    margin: 0 auto 80px;
+  }
+
+  .actual {
+    &__first-part,
+    &__second-part {
+      flex-direction: column;
+      width: 100%;
+    }
+
+    &__second-part {
+      flex-direction: column-reverse;
+    }
+
+    &__heading {
+      margin-bottom: 50px;
+      text-align: center;
+    }
+
+    &__first-part {
+      display: flex;
+      margin-bottom: 60px;
+    }
+
+    &__img {
+      height: 520px;
+      width: 100%;
+      object-fit: cover;
+      object-position: center;
+    }
+
+    &__img_first,
+    &__img_second {
+      margin: 0 0 30px;
+    }
+  }
+
+  .from-romantism {
+    padding: 0 34px;
+    height: 390px;
+    margin-bottom: 210px;
+  
+    &__background {
+      height: 390px;
+    }
+  }
+
+  .follow {
+    height: 380px;
+
+    &__content {
+      position: absolute;
+      top: 64px;
+      left: calc(50% - 475px / 2);
+    }
+
+  
+    &__field {
+      display: flex;
+    }
+  
+    &__email {
+      max-width: 395px;
+      height: 70px;
+      outline: none;
+      padding: 28px;
+      border: none;
+      background-color: #fff;
+      margin-right: 10px;
+    }
+  }
+
+  .footer {
+    flex-direction: column;
+    justify-content: start;
+
+    &__first-block,
+    &__second-block {
+      width: 100%;
+    }
+    &__first-block {
+      justify-content: start;
+    }
+
+    &__second-block {
+      justify-content: space-between;
+      padding: 0 110px;
+    }
+
+    &__line {
+      position: relative;
+      left: 15%;
+      width: 75%;
+      height: 1px;
+      background-color: #1a5a4c;
+      margin: 46px 0;
+    }
   }
 }
 
@@ -42,61 +197,223 @@
     flex-direction: column;
     padding: 0;
     height: 100vh;
+
+    &__container {
+      left: 23px;
+    }
+
+    &__main {
+      position: relative;
+      height: 54vh;
+      width: 100%;
+      margin-bottom: 20px;
+    }
+
+    &__main-logo {
+      width: 55px;
+      height: 61px;
+      left: calc(50% - 55px / 2);
+      top: 9px;
+    }
+
+    &__photo-smaller {
+      height: 100%;
+    }
+
+    &__title,
+    &__button {
+      display: none;
+    }
+
+    &__title-mobile {
+      display: inline-block;
+      text-align: center;
+      font-family: Montserrat, sans-serif;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 45px;
+      line-height: 100%;
+      text-transform: uppercase;
+      margin-bottom: 20px;
+    }
+
+    &__button-mobile {
+      display: block;
+      margin: 0 auto 20px;
+    }
+
+    &__buy-tickets {
+      font-size: 16px;
+      font-family: IBM Plex Sans, sans-serif;
+      font-style: normal;
+      font-weight: 500;
+      width: 230px;
+      height: 50px;
+    }
+
+    &__buy-arrow {
+      width: 50px;
+      height: 50px;
+    }
   }
 
-  .header__container {
-    left: 23px;
-  }
-  .header__main {
-    position: relative;
-    height: 54vh;
-    width: 100%;
-    margin-bottom: 20px;
+  .actual {
+    padding: 0 20px;
+    &__first-part,
+    &__second-part {
+      flex-direction: column;
+      width: 100%;
+      font-size: 28px;
+    }
+
+    &__second-part {
+      flex-direction: column-reverse;
+    }
+
+    &__heading {
+      margin-bottom: 50px;
+      text-align: center;
+    }
+
+    &__first-part {
+      display: flex;
+      margin-bottom: 60px;
+    }
+
+    &__img {
+      height: 210px;
+      width: 100%;
+      object-fit: cover;
+      object-position: center;
+    }
+
+    &__name {
+      font-size: 28px;
+    }
   }
 
-  .header__main-logo {
-    width: 55px;
-    height: 61px;
-    left: calc(50% - 55px / 2);
-    top: 9px;
+  .from-romantism {
+    padding: 0;
+    height: 210px;
+    margin-bottom: 167px;
+
+    &__background {
+      height: 210px;
+    }
+
+    &__description {
+      width: 84%;
+      height: 174px;
+      top: calc(100% - 57px);
+      left: calc(50% - 84% / 2);
+      text-align: center;
+    }
+
+    &__type {
+      margin-right: 14px;
+    }
+
+    &__options {
+      padding: 25px 0 15px;
+      justify-content: center;
+      text-align: center;
+      margin: 0 auto;
+    }
+
+    &__name {
+      font-size: 28px;
+      margin: 0;
+    }
+
+    .lrg-scr {
+      display: none;
+    }
+
+    .smll-scr {
+      display: inline;
+    }
   }
 
-  .header__photo-smaller {
-    height: 100%;
-  }
-  .header__title,
-  .header__button {
-    display: none;
+  .follow {
+    &__content {
+      position: absolute;
+      top: 64px;
+      left: calc(50% - 280px / 2);
+    }
+
+    &__heading {
+      font-size: 36px;
+      line-height: 100%;
+      margin-bottom: 30px;
+    }
+  
+    &__sentence {
+      font-size: 18px;
+      line-height: 150%;
+      margin-bottom: 48px;
+    }
+
+    &__email {
+      width: 233px;
+      height: 50px;
+      padding: 18px 31px;
+      margin-right: 0;
+    }
+
+    &__submit {
+      height: 50px;
+      width: 50px;
+    }
+
+    &__sentence br {
+      display: inline-block;
+    }
   }
 
-  .header__title-mobile {
-    display: inline-block;
-    text-align: center;
-    font-family: Montserrat, sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 45px;
-    line-height: 100%;
-    text-transform: uppercase;
-    margin-bottom: 20px;
-  }
+  .footer {
+    flex-direction: column;
+    justify-content: start;
+    padding: 0 20px;
 
-  .header__button-mobile {
-    display: block;
-    margin: 0 auto 20px;
-  }
+    &__first-block,
+    &__second-block {
+      width: 100%;
+    }
 
-  .header__buy-tickets {
-    font-size: 16px;
-    font-family: IBM Plex Sans, sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    width: 230px;
-    height: 50px;
-  }
+    &__first-block {
+      justify-content: start;
+    }
 
-  .header__buy-arrow {
-    width: 50px;
-    height: 50px;
+    &__second-block {
+      justify-content: space-between;
+      padding: 0;
+    }
+
+    &__insta {
+      display: none;
+    }
+
+    &__logo {
+      margin: 0;
+    }
+
+    &__insta-alter {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 40px;
+    }
+
+    &__medias {
+      width: 68px;
+      height: 24px;
+    }
+
+    &__line {
+      left: 0;
+      width: 100%;
+      height: 1px;
+      margin: 70px 0 40px;
+    }
   }
 }
