solution without media

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,43 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "header";
+@import "reset";
+@import "menu";
+@import "part";
+@import "general";
+@import "container";
+@import "button";
+@import "current";
+@import "picture1";
+@import "events";
+@import "outside-title";
+@import "middle-part";
+@import "gallery";
+@import "item";
+@import "scale";
+@import "subscription";
+@import "footer";
+
+* {
+  box-sizing: border-box;
+}
+
+html {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-style: normal;
+  font-size: 16px;
+  line-height: 150%;
+}
 
 body {
   background: $c-gray;
+  scroll-behavior: smooth;
+  color: #0f0e08;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
 }
