--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,11 @@
 $c-gray: #eee;
+$transitionDuration: 0.5s;
+$scaleDuration: 1s;
+$generalColor: #1a5a4c;
+$mainColor: #fff;
+$arrowSize: 70px;
+$hoverColor: #f14a27;
+$secondColor: #687480;
+$textColor: #4e4e4e;
+$footerTextColor: #0f0e08;
+$widtOfAnnouncment: 570px;
