--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -8,6 +8,7 @@ html {
   font-size: 16px;
   color: $darkColor;
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -28,21 +29,5 @@ body {
 
   @media (max-width: $iPadScreenWidth) {
     padding: 60px $iPadScreenPadding 0;
-  }
-
-  &--header {
-    padding-top: 20px;
-  }
-
-  &--events {
-    padding-bottom: 184px;
-
-    @media (max-width: $iPadScreenWidth) {
-      padding-bottom: 80px;
-    }
-  }
-
-  &--promo-bot {
-    padding-top: 0;
   }
 }
