--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -49,6 +49,13 @@
   }
 
   &__img {
+    transition: ease 0.5s;
+
+    &:hover {
+      background-color: $accentColor;
+      border-radius: 50%;
+    }
+
     @media (max-width: $tabletScreenWidth) {
       display: none;
     }
