--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -1,6 +1,14 @@
 .events {
   position: relative;
 
+  &__container {
+    padding-bottom: 184px;
+
+    @media (max-width: $iPadScreenWidth) {
+      padding-bottom: 80px;
+    }
+  }
+
   &__title {
     text-align: center;
     @include translateFromLeft(1s);
