--- a/src/styles/blocks/exhibition.scss
+++ b/src/styles/blocks/exhibition.scss
@@ -95,6 +95,10 @@ $exhibitionBlockWidth: 568px;
       top: calc(50% - #{$coupleHeight} / 2);
       right: - $noteScreenPadding;
 
+      &:hover {
+        transform: translateX(50px);
+      }
+
       @media (max-width: $noteScreenWidth) {
         right: - $tabletScreenPadding;
       }
@@ -110,6 +114,10 @@ $exhibitionBlockWidth: 568px;
     &--kozak {
       top: $exhibitionBlockHeight / 2 - $kozakHeight / 2;
       left: calc(50% - #{$kozakWidth} / 2);
+
+      &:hover {
+        transform: rotateX(-25deg);
+      }
 
       @media (max-width: $tabletScreenWidth) {
         width: $kozakWidth / 2;
