--- a/src/styles/blocks/promo-bot.scss
+++ b/src/styles/blocks/promo-bot.scss
@@ -14,10 +14,19 @@ $imgWidth: 490px;
     height: 584px;
   }
 
+  &__container {
+    padding-top: 0;
+  }
+
   &__img {
     position: absolute;
     left: 0;
     bottom: 0;
+    transition: 1s;
+
+    &:hover {
+      transform: translateX(-50px);
+    }
 
     @media (max-width: $noteScreenWidth) {
       width: $imgWidth / 1.5;
