--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,3 +14,7 @@
 @import "blocks/event";
 @import "blocks/archieve";
 @import "blocks/promo-bot";
+@import "blocks/news";
+@import "blocks/digest";
+@import "blocks/arrow";
+@import "blocks/footer";
