--- a/src/styles/blocks/archieve.scss
+++ b/src/styles/blocks/archieve.scss
@@ -2,11 +2,26 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  margin-right: 100px;
 
   @media (max-width: $tabletScreenWidth) {
     margin-top: 60px;
+    margin-right: 0;
     flex-direction: column;
     justify-content: center;
+  }
+
+  &__line {
+    width: 70px;
+    height: 1px;
+    background-color: $darkColor;
+    opacity: 0.3;
+    transition: 1s;
+
+    @media (max-width: $tabletScreenWidth) {
+      margin-bottom: 11px;
+      width: 140px;
+    }
   }
 
   &__link {
@@ -15,16 +30,14 @@
     font-size: 16px;
     color: $darkColor;
     padding: 11px;
-  }
+    transition: 1s;
 
-  &__line {
-    width: 70px;
-    height: 1px;
-    background-color: $darkColor;
-    opacity: 0.3;
+    &:hover {
+      color: $accentColor;
+    }
 
-    @media (max-width: $tabletScreenWidth) {
-      margin-bottom: 11px;
+    &:hover + .archieve__line {
+      background-color: $accentColor;
     }
   }
 }
