--- a/src/styles/_exhibitions.scss
+++ b/src/styles/_exhibitions.scss
@@ -121,3 +121,51 @@
     }
   }
 }
+
+@media (max-width: 500px) {
+  .exhibitions {
+    &__heading {
+      @include sectionsMobilHeading;
+    }
+
+    &__event {
+      &-photo-box {
+        width: 100%;
+        height: inherit;
+      }
+
+      &-img {
+
+        width: 100%;
+        object-fit: cover;
+      }
+
+      &-info {
+        padding-top: 15px;
+        width: 100%;
+      }
+
+      &-top {
+        justify-content: space-between;
+      }
+
+      &-class {
+        font-size: 16px;
+      }
+
+      &-date {
+        font-size: 16px;
+      }
+
+      &-heading {
+        font-weight: normal;
+        font-size: 28px;
+
+        &::after {
+          width: 12px;
+          height: 12px;
+        }
+      }
+    }
+  }
+}
