--- a/src/styles/_futer.scss
+++ b/src/styles/_futer.scss
@@ -89,3 +89,97 @@
     margin-bottom: 20px;
   }
 }
+
+@media (max-width: 1024px) {
+  .futer {
+    padding: 50px 35px;
+
+
+    &__top {
+      padding: 0 120px;
+      position: relative;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    &__icons {
+      position: absolute;
+      left: 0;
+    }
+
+    &__center {
+      margin: 46px 0 51px;
+      height: 1px;
+      width: 100%;
+    }
+
+    &__left {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+    }
+
+    &__timetable {
+      width: 40%;
+
+      &-text {
+        margin: 0;
+      }
+    }
+
+    &__contacts {
+      width: 40%;
+    }
+
+    &__right {
+      justify-content: space-between;
+      width: 100%;
+    }
+  }
+}
+
+@media (max-width: 500px) {
+  .futer {
+    padding: 50px 20px;
+
+    &__icons {
+      top: -100px;
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+    }
+
+    .instagram {
+      margin-left: 25px;
+    }
+
+    &__top {
+      top: 100px;
+      padding: 0;
+    }
+
+    &__timetable {
+      width: 45%;
+
+      &-text {
+        margin-bottom: 20px;
+      }
+    }
+
+    &__center {
+      margin: 50px 0 40px;
+    }
+
+    &__bottom {
+      margin: 0;
+      flex-direction: column-reverse;
+      align-items: center;
+      justify-content: space-between;
+      margin-top: 70px;
+
+      &-right {
+        margin-bottom: 14px;
+      }
+    }
+  }
+}
