--- a/src/styles/_gallery.scss
+++ b/src/styles/_gallery.scss
@@ -84,3 +84,27 @@
     }
   }
 }
+
+@media (max-width: 500px) {
+  .gallery {
+    overflow: hidden;
+
+    &__heading {
+      @include sectionsMobilHeading;
+    }
+
+    &__photo {
+      display: none;
+      margin: 0 auto 30px;
+
+      &:first-of-type {
+        display: block;
+        margin-right: 0;
+      }
+    }
+
+    &__img {
+      object-fit: contain;
+    }
+  }
+}
