--- a/src/styles/_lectures.scss
+++ b/src/styles/_lectures.scss
@@ -55,3 +55,30 @@
     }
   }
 }
+
+@media (max-width: 500px) {
+  .lectures {
+    padding: 0;
+
+    &__photo {
+      height: 210px;
+    }
+
+    &__info {
+      width: 90%;
+      padding: 25px 20px 34px;
+    }
+
+    &__heading {
+      font-size: 28px;
+    }
+
+    &__name {
+      font-size: 16px;
+    }
+
+    &__date {
+      font-size: 16px;
+    }
+  }
+}
