--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -6,6 +6,11 @@
   margin-bottom: 60px;
 }
 
+@mixin sectionsMobilHeading {
+  font-size: 36px;
+  margin-bottom: 40px;
+}
+
 @mixin buttonMore {
   width: 70px;
   height: 70px;
