--- a/src/styles/_subscription.scss
+++ b/src/styles/_subscription.scss
@@ -48,3 +48,30 @@
     }
   }
 }
+
+@media (max-width: 1024px) {
+  .subscription {
+    padding: 64px 0 94px;
+  }
+}
+
+@media (max-width: 500px) {
+  .subscription {
+    padding: 55px 20px 113px;
+    background-size: cover;
+    background-position: center;
+
+    &__heading {
+      @include sectionsMobilHeading;
+      margin-bottom: 30px;
+    }
+
+    &__text {
+      margin-bottom: 48px;
+    }
+
+    &__email {
+      width: calc(100% - 70px);
+    }
+  }
+}
