--- a/src/styles/follow.scss
+++ b/src/styles/follow.scss
@@ -66,7 +66,15 @@
   &__submit {
     background: #f14a27;
     color: #000;
-    font-weight: 400;
-    padding: 0;
+    padding-top: 20px;
+  }
+
+  &__link {
+    font-family: Oswald, sans-serif;
+    color: #d7dde3;
+    font-size: 24px;
+    line-height: 24px;
+    font-weight: 500;
+    
   }
 }
