--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -33,6 +33,17 @@
   }
   
   &__button {
+    padding-top: 20px;
+    align-items: center;
     background: #1a5a4c;
+  }
+
+  &__link {
+    font-family: Oswald, sans-serif;
+    display: block;
+    color: #d7dde3;
+    font-size: 24px;
+    line-height: 24px;
+    font-weight: 500;
   }
 }
