--- a/src/styles/media.scss
+++ b/src/styles/media.scss
@@ -192,6 +192,13 @@
 }
 
 @media (max-width: 624px) {
+  .nav {
+    &__link {
+      font-size: 24px;
+      letter-spacing: 0.5px;
+    }
+  }
+
   .header {
     display: flex;
     flex-direction: column;
@@ -363,6 +370,7 @@
     &__submit {
       height: 50px;
       width: 50px;
+      padding: 10px 13px 13px;
     }
 
     &__sentence br {
