--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -91,6 +91,7 @@
   
   &__buy-container {
     margin: 0 0 4%;
+    display: flex;
   }
   
   &__buy-tickets {
@@ -105,17 +106,26 @@
   }
   
   &__buy-arrow {
+    position: relative;
     width: 70px;
     height: 70px;
     background: #847b74;
-    font-family: Oswald, sans-serif;
-    font-weight: 200;
-    font-size: 24px;
     margin: 0;
     border: none;
     cursor: pointer;
     color: #d7dde3;
     transition: all 0.5s;
+    padding: 23px;
+  }
+
+  &__arrow-link {
+  
+
+    // font-family: Oswald, sans-serif;
+    font-weight: 200;
+    font-size: 24px;
+    line-height: 24px;
+    // height: 16px;
   }
   
   &__buy-arrow:hover {
