--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -131,6 +131,12 @@
     color: #000;
     text-transform: uppercase;
     z-index: 2;
+    
+  }
+
+  &__unfilled {
+    color: transparent;
+    -webkit-text-stroke: 1px #000;
   }
 
   &__buy-arrow {
