--- a/src/styles/media.scss
+++ b/src/styles/media.scss
@@ -244,6 +244,11 @@
       margin-bottom: 20px;
     }
 
+    &__unfilled {
+      color: black;
+      -webkit-text-stroke:unset;
+    }
+
     &__button-mobile {
       display: block;
       margin: 0 auto 20px;
