--- a/src/styles/_promo.scss
+++ b/src/styles/_promo.scss
@@ -47,9 +47,14 @@
     &:hover {
       color: #fff;
       box-shadow: inset $linkWidth 0 0 0 $hoverColor;
+      background-color: $orangeColor;
+      
+      & .square--green {
+        opacity: 0;
+      }
     }
   }
-
+  
   &__page-title {
     width: 280px;
     margin: 20px auto 0;
