--- a/src/styles/_square.scss
+++ b/src/styles/_square.scss
@@ -7,6 +7,7 @@
 
   &--orange {
     background: $orangeColor url("../images/arrow-top.png") center no-repeat;
+    border-color: $orangeColor;
   }
 
   @media (min-width: 320px) {
